--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -67,11 +67,23 @@
 		<widget class="GtkMenu" id="help1_menu">
 
 		  <child>
-		    <widget class="GtkImageMenuItem" id="menu-help-about">
+		    <widget class="GtkImageMenuItem" id="menu_help_contents">
 		      <property name="visible">True</property>
-		      <property name="label">gtk-about</property>
-		      <property name="use_stock">True</property>
-		      <signal name="activate" handler="on_menu_help_about_activate" last_modification_time="Tue, 27 Mar 2007 20:48:32 GMT"/>
+		      <property name="label" translatable="yes">_Contents</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_menu_help_contents_activate" last_modification_time="Tue, 27 Mar 2007 20:48:32 GMT"/>
+
+		      <child internal-child="image">
+			<widget class="GtkImage" id="image3">
+			  <property name="visible">True</property>
+			  <property name="stock">gtk-help</property>
+			  <property name="icon_size">1</property>
+			  <property name="xalign">0.5</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 		</widget>
