Force immediate refresh when changing tab pages

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -506,6 +506,7 @@
 	  <property name="tab_pos">GTK_POS_TOP</property>
 	  <property name="scrollable">False</property>
 	  <property name="enable_popup">False</property>
+	  <signal name="switch_page" handler="on_details_pages_switch_page" last_modification_time="Wed, 07 May 2008 15:16:43 GMT"/>
 
 	  <child>
 	    <widget class="GtkNotebook" id="console-pages">
