Change 'Host Details' to 'Connection Details' in manager, few small other text changes

--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -53,7 +53,7 @@
 		      <accelerator key="r" modifiers="GDK_MOD1_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image127">
+			<widget class="GtkImage" id="image144">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-open</property>
 			  <property name="icon_size">1</property>
@@ -80,7 +80,7 @@
 		      <signal name="activate" handler="on_menu_file_add_connection_activate" last_modification_time="Wed, 11 Jun 2008 19:31:08 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image128">
+			<widget class="GtkImage" id="image145">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-connect</property>
 			  <property name="icon_size">1</property>
@@ -133,7 +133,7 @@
 		  <child>
 		    <widget class="GtkMenuItem" id="menu_host_details">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Host details...</property>
+		      <property name="label" translatable="yes">Connection Details...</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_menu_host_details_activate" last_modification_time="Tue, 27 Mar 2007 21:31:10 GMT"/>
 		    </widget>
@@ -142,12 +142,12 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="menu_edit_details">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Machine details...</property>
+		      <property name="label" translatable="yes">Machine Details...</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_menu_edit_details_activate" last_modification_time="Tue, 28 Mar 2006 17:06:34 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image129">
+			<widget class="GtkImage" id="image146">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-properties</property>
 			  <property name="icon_size">1</property>
@@ -163,12 +163,12 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="menu_edit_delete">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Delete machine</property>
+		      <property name="label" translatable="yes">Delete Machine</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_menu_edit_delete_activate" last_modification_time="Tue, 28 Mar 2006 17:06:34 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image130">
+			<widget class="GtkImage" id="image147">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-delete</property>
 			  <property name="icon_size">1</property>
@@ -301,7 +301,7 @@
 		      <accelerator key="F1" modifiers="0" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image131">
+			<widget class="GtkImage" id="image148">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-help</property>
 			  <property name="icon_size">1</property>
