--- a/src/vmm-open-connection.glade
+++ b/src/vmm-open-connection.glade
@@ -5,7 +5,7 @@
 
 <widget class="GtkDialog" id="vmm-open-connection">
   <property name="visible">True</property>
-  <property name="title" translatable="yes">Open connection</property>
+  <property name="title" translatable="yes">Add Connection</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
