--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -35,6 +35,53 @@
 	  <property name="child_pack_direction">GTK_PACK_DIRECTION_LTR</property>
 
 	  <child>
+	    <widget class="GtkMenuItem" id="file1">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">_File</property>
+	      <property name="use_underline">True</property>
+	      <signal name="activate" handler="on_file1_activate" last_modification_time="Fri, 13 Jun 2008 17:58:16 GMT"/>
+
+	      <child>
+		<widget class="GtkMenu" id="file1_menu">
+
+		  <child>
+		    <widget class="GtkMenuItem" id="view_manager">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">View Manager</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_details_menu_view_manager_activate" last_modification_time="Fri, 13 Jun 2008 18:02:21 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkSeparatorMenuItem" id="separator15">
+		      <property name="visible">True</property>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="close4">
+		      <property name="visible">True</property>
+		      <property name="label">gtk-close</property>
+		      <property name="use_stock">True</property>
+		      <signal name="activate" handler="on_details_menu_close_activate" last_modification_time="Fri, 13 Jun 2008 18:02:21 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkImageMenuItem" id="quit3">
+		      <property name="visible">True</property>
+		      <property name="label">gtk-quit</property>
+		      <property name="use_stock">True</property>
+		      <signal name="activate" handler="on_details_menu_quit_activate" last_modification_time="Fri, 13 Jun 2008 18:02:31 GMT"/>
+		    </widget>
+		  </child>
+		</widget>
+	      </child>
+	    </widget>
+	  </child>
+
+	  <child>
 	    <widget class="GtkMenuItem" id="virtual_machine1">
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">Virtual _Machine</property>
@@ -125,21 +172,6 @@
 		      <property name="label" translatable="yes">_Take Screenshot</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_details_menu_screenshot_activate" last_modification_time="Wed, 07 May 2008 15:38:34 GMT"/>
-		    </widget>
-		  </child>
-
-		  <child>
-		    <widget class="GtkSeparatorMenuItem" id="separator8">
-		      <property name="visible">True</property>
-		    </widget>
-		  </child>
-
-		  <child>
-		    <widget class="GtkImageMenuItem" id="details-menu-close">
-		      <property name="visible">True</property>
-		      <property name="label">gtk-close</property>
-		      <property name="use_stock">True</property>
-		      <signal name="activate" handler="on_details_menu_close_activate"/>
 		    </widget>
 		  </child>
 		</widget>
