--- a/src/vmm-preferences.glade
+++ b/src/vmm-preferences.glade
@@ -138,6 +138,7 @@
 
 		      <child>
 			<widget class="GtkLabel" id="label37">
+			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">Maintain history of</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
@@ -218,6 +219,7 @@
 
 		      <child>
 			<widget class="GtkLabel" id="label39">
+			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">samples</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
@@ -245,6 +247,7 @@
 
 		      <child>
 			<widget class="GtkSpinButton" id="stats-history-length">
+			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="climb_rate">1</property>
 			  <property name="digits">0</property>
