--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -4455,7 +4455,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkLabel" id="config-graphics-remove">
+		    <widget class="GtkLabel" id="label500">
 		      <property name="visible">True</property>
 		      <property name="label">Graphics</property>
 		      <property name="use_underline">False</property>
