Fix graphics removal sensitivity for running guest.

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -4429,7 +4429,7 @@
 			  <property name="spacing">0</property>
 
 			  <child>
-			    <widget class="GtkButton" id="button1">
+			    <widget class="GtkButton" id="config-graphics-remove">
 			      <property name="visible">True</property>
 			      <property name="can_default">True</property>
 			      <property name="can_focus">True</property>
