--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -210,6 +210,15 @@
 		  </child>
 
 		  <child>
+		    <widget class="GtkMenuItem" id="details-menu-view-serial">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Serial Console...</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_details_menu_view_serial_activate" last_modification_time="Thu, 24 Jul 2008 19:14:47 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkSeparatorMenuItem" id="separator7">
 		      <property name="visible">True</property>
 		    </widget>
