Fix mac address mnemonic collision (Adam Stokes)

--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -965,7 +965,7 @@
                               <widget class="GtkCheckButton" id="mac-address">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="label" translatable="yes">Set _fixed MAC address for this NIC?</property>
+                                <property name="label" translatable="yes">Set fixed MAC _address for this NIC?</property>
                                 <property name="use_underline">True</property>
                                 <property name="response_id">0</property>
                                 <property name="draw_indicator">True</property>
