--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -3873,7 +3873,7 @@
 			    <widget class="GtkCheckButton" id="mac-address">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">Set _fixed MAC address for your virtual system?</property>
+			      <property name="label" translatable="yes">Set fixed MAC _address for your virtual system?</property>
 			      <property name="use_underline">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
