Append volume name suffix depending on parent pool type.

--- a/src/vmm-create-vol.glade
+++ b/src/vmm-create-vol.glade
@@ -248,9 +248,9 @@
 			  </child>
 
 			  <child>
-			    <widget class="GtkLabel" id="label15">
+			    <widget class="GtkLabel" id="vol-name-suffix">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">.img</property>
+			      <property name="label">suffix</property>
 			      <property name="use_underline">False</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_LEFT</property>
