Add right click option to copy a volume target path to the clipboard.

--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -2090,6 +2090,7 @@
 				      <property name="fixed_height_mode">False</property>
 				      <property name="hover_selection">False</property>
 				      <property name="hover_expand">False</property>
+				      <signal name="button_press_event" handler="on_vol_list_button_press_event" last_modification_time="Wed, 10 Sep 2008 14:58:32 GMT"/>
 				    </widget>
 				  </child>
 				</widget>
